--- a/templates/Blog/post_create.html
+++ b/templates/Blog/post_create.html
@@ -19,6 +19,10 @@
                     {{ form.category }}
                 </div>
                 <div class="center">
+                    <label class="form-label">Tags:</label>
+                    {{ form.tags }}
+                </div>
+                <div class="center">
                     <input type="submit" value="Create post" class="btn btn-primary full-width">
                 </div>
             </form>
