--- a/templates/Blog/post_update.html
+++ b/templates/Blog/post_update.html
@@ -4,7 +4,7 @@
     <div class="container card">
         <form action="" method="post" novalidate>
             {% csrf_token %}
-            <h2 class="text-center">Create a post:</h2>
+            <h2 class="text-center">Edit a post:</h2>
             <div class="center">
                 <label class="form-label">Title:</label>
                 {{ form.title }}
@@ -16,6 +16,10 @@
             <div class="center">
                 <label class="form-label">Category:</label>
                 {{ form.category }}
+            </div>
+            <div class="center">
+                <label class="form-label">Tags:</label>
+                {{ form.tags }}
             </div>
             <div class="center">
                 <input type="submit" value="Update" class="btn btn-primary full-width">
