--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "css/style.css" %}"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
@@ -19,6 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <a class="navbar-brand me-auto mt-2 mt-lg-0" href="{% url 'posts' %}">Blog</a>
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link me-auto mt-2 mt-lg-0" href="{% url 'categories' %}">Categories</a>
+                </li>
+
                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
                         <a href="{% url 'profile' %}" class="btn btn-outline-primary">Profile({{ request.user | title }})</a>
