--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,3 +39,32 @@
 .navbar-brand {
   font-size: 32px;
 }
+
+.box {
+  display: flex;
+}
+
+.item {
+  flex: 1 2 auto;
+  margin-right: 5px;
+}
+
+.search {
+  flex: 2 1 auto;
+}
+
+.image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  max-height: 500px;
+  border: solid 1px rgba(0, 0, 0, 0.3);
+}
+
+.image-item {
+  width: 700px;
+  min-height: 200px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  padding-left: 3px;
+}
