--- a/templates/Blog/post_detail.html
+++ b/templates/Blog/post_detail.html
@@ -4,7 +4,12 @@
     <article class="post card">
         <h2 class="card-header">{{ post.title }}</h2>
         <p class="card-text">{{ post.content|linebreaksbr }}</p>
-        <div class="card-footer">
+        {% if post.image %}
+            <div class="card-element image-item">
+                <a href="{{ post.image.url  }}"><img src="{{ post.image.url }}" alt="{{ post.title }}" class="image"></a>
+            </div>
+        {% endif %}
+        <div class="card-footer" id="comment" >
             <p>Author: {{ post.author }}</p>
             <p>Category: {{ post.category }}</p>
             {% if post.tags.all %}
@@ -29,7 +34,7 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="card-text">
-                    <label class="form-label">Text:</label>
+                    <label class="form-label">Comment:</label>
                     {{ form.text }}
                     {% if messages %}
                         <ul class="messages">
@@ -48,7 +53,7 @@
     {% endif %}
     {% if post.comments.last %}
         <hr>
-        <div>
+        <div id="comments">
             <h2>Comments:</h2>
             {% for comment in post.comments.all %}
                 <div class="card comment">
